microservices/apple/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apple
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: apple
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apple
        app.kubernetes.io/component: frontend
        app.kubernetes.io/instance: apple
    spec:
      containers:
      - name: apple
        image: hashicorp/http-echo
        args:
          - "-text=apple"
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "128Mi"
