microservices/apple/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: dev
spec:
  type: ClusterIP
  # type: LoadBalancer
  selector:
    app.kubernetes.io/instance: apple
  ports:
  - port: 5678
